@@ -1,3 +1,8 @@
+2005-07-06  Chris Burdess  <dog@gnu.org>
+
+	* gnu/xml/transform/StreamSerializer.java,
+	gnu/xml/xpath/EqualityExpr.java: XSLT conformance fixes.
+
 2005-07-06  Lillian Angel  <langel@redhat.com>
 
 	* javax/swing/plaf/basic/BasicTreeUI.java
